{
  "version": 4,
  "terraform_version": "1.7.3",
  "serial": 1117,
  "lineage": "efa70088-1ac5-4f74-77ab-705a33227ad3",
  "resources": [
    {
      "module": "module.ecs",
      "mode": "managed",
      "type": "aws_lb",
      "name": "vprofile",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:091570247959:loadbalancer/app/vprofile-alb/272b4c0c80d95d90",
            "arn_suffix": "app/vprofile-alb/272b4c0c80d95d90",
            "connection_logs": [
              {
                "enabled": false
              }
            ],
            "desync_mitigation_mode": "defensive",
            "dns_name": "vprofile-alb-523599967.us-east-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "id": "arn:aws:elasticloadbalancing:us-east-1:091570247959:loadbalancer/app/vprofile-alb/272b4c0c80d95d90",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "vprofile-alb",
            "preserve_host_header": false,
            "security_groups": [
              "sg-0edd0180b17c16ae5"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-0bc5b93841f3d98e3"
              },
              {
                "subnet_id": "subnet-0fad0e34f505a8773"
              }
            ],
            "subnets": [
              "subnet-0bc5b93841f3d98e3",
              "subnet-0fad0e34f505a8773"
            ],
            "tags": {
              "Environment": "production"
            },
            "tags_all": {
              "Environment": "production"
            },
            "vpc_id": "vpc-056afa564ec49130d",
            "xff_header_processing_mode": "append",
            "zone_id": "Z35SXDOTRQ7X7K"
          },
          "dependencies": [
            "module.securitygroups.aws_security_group.frontend-servers",
            "module.subnets.aws_subnet.private",
            "module.subnets.aws_subnet.public1",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.ecs",
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "front_end",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-east-1:091570247959:listener/app/vprofile-alb/272b4c0c80d95d90/d73d1b53c9619868",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:091570247959:targetgroup/vp-tg/aec6afad6d603cb6",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:091570247959:listener/app/vprofile-alb/272b4c0c80d95d90/d73d1b53c9619868",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-1:091570247959:loadbalancer/app/vprofile-alb/272b4c0c80d95d90",
            "mutual_authentication": [],
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "tags": null,
            "tags_all": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.ecs.aws_lb.vprofile",
            "module.ecs.aws_lb_target_group.vprofile-target-group",
            "module.securitygroups.aws_security_group.frontend-servers",
            "module.subnets.aws_subnet.private",
            "module.subnets.aws_subnet.public1",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.ecs",
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "vprofile-target-group",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:091570247959:targetgroup/vp-tg/aec6afad6d603cb6",
            "arn_suffix": "targetgroup/vp-tg/aec6afad6d603cb6",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 2,
                "interval": 30,
                "matcher": "200-399",
                "path": "/login",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:091570247959:targetgroup/vp-tg/aec6afad6d603cb6",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "vp-tg",
            "port": 8080,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": true,
                "type": "lb_cookie"
              }
            ],
            "target_failover": [
              {
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "ip",
            "vpc_id": "vpc-056afa564ec49130d"
          },
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.igw",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "gw",
      "provider": "module.igw.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:091570247959:internet-gateway/igw-086228e236d3f6031",
            "id": "igw-086228e236d3f6031",
            "owner_id": "091570247959",
            "tags": {
              "Environment": "dev",
              "Name": "vprofile-igw",
              "Project": "vprofile-project"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "vprofile-igw",
              "Project": "vprofile-project"
            },
            "vpc_id": "vpc-056afa564ec49130d"
          },
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.mysql-rds",
      "mode": "managed",
      "type": "aws_instance",
      "name": "rds-connect-ec2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-080e1f13689e07408",
            "arn": "arn:aws:ec2:us-east-1:091570247959:instance/i-08ed35944a904dc18",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 2,
            "cpu_options": [
              {
                "core_count": 2,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-08ed35944a904dc18",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.medium",
            "ipv6_address_count": 0,
            "key_name": "web-keypair",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0e1180a60305bf906",
            "private_dns": "ip-10-0-3-91.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.3.91",
            "public_dns": "ec2-3-84-73-41.compute-1.amazonaws.com",
            "public_ip": "3.84.73.41",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0ebc156f8a08b6784",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0bc5b93841f3d98e3",
            "tags": {
              "Environment": "dev",
              "Name": "nginx-frontend-server",
              "Project": "vprofile-project"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "nginx-frontend-server",
              "Project": "vprofile-project"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0edd0180b17c16ae5"
            ]
          },
          "dependencies": [
            "module.mysql-rds.aws_db_instance.vprofile-db",
            "module.mysql-rds.aws_db_subnet_group.vprofile",
            "module.mysql-rds.data.aws_ssm_parameter.db_password",
            "module.mysql-rds.data.aws_ssm_parameter.db_username",
            "module.securitygroups.aws_security_group.backend-servers",
            "module.securitygroups.aws_security_group.frontend-servers",
            "module.subnets.aws_subnet.private",
            "module.subnets.aws_subnet.private1",
            "module.subnets.aws_subnet.public1",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.ngw",
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat_eip",
      "provider": "module.ngw.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-04a34e97da4000be1",
            "domain": "vpc",
            "id": "eipalloc-04a34e97da4000be1",
            "network_border_group": "us-east-1",
            "public_dns": "ec2-52-1-79-246.compute-1.amazonaws.com",
            "public_ip": "52.1.79.246",
            "public_ipv4_pool": "amazon",
            "vpc": true
          }
        }
      ]
    },
    {
      "module": "module.ngw",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "nat-gw",
      "provider": "module.ngw.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-04a34e97da4000be1",
            "association_id": "eipassoc-06140e4a9f0dc6b9d",
            "connectivity_type": "public",
            "id": "nat-0ed7414dacf45b704",
            "network_interface_id": "eni-06cc609f8fe76247d",
            "private_ip": "10.0.1.44",
            "public_ip": "52.1.79.246",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-067a9ff9ee7eda1a2",
            "tags": {
              "Environment": "dev",
              "Name": "vprofile-ngw",
              "Project": "vprofile-project"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "vprofile-ngw",
              "Project": "vprofile-project"
            }
          },
          "dependencies": [
            "module.igw.aws_internet_gateway.gw",
            "module.ngw.aws_eip.nat_eip",
            "module.subnets.aws_subnet.public",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.routeable",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private-subnet",
      "provider": "module.routeable.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:091570247959:route-table/rtb-0532b4f0685ca9fa4",
            "id": "rtb-0532b4f0685ca9fa4",
            "owner_id": "091570247959",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0ed7414dacf45b704",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Environment": "dev",
              "Name": "vprofile-private-RT",
              "Project": "vprofile-project"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "vprofile-private-RT",
              "Project": "vprofile-project"
            },
            "timeouts": null,
            "vpc_id": "vpc-056afa564ec49130d"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.igw.aws_internet_gateway.gw",
            "module.ngw.aws_eip.nat_eip",
            "module.ngw.aws_nat_gateway.nat-gw",
            "module.subnets.aws_subnet.public",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.routeable",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public-subnet",
      "provider": "module.routeable.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:091570247959:route-table/rtb-05981b68c6f225186",
            "id": "rtb-05981b68c6f225186",
            "owner_id": "091570247959",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-086228e236d3f6031",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Environment": "dev",
              "Name": "vprofile-public-RT",
              "Project": "vprofile-project"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "vprofile-public-RT",
              "Project": "vprofile-project"
            },
            "timeouts": null,
            "vpc_id": "vpc-056afa564ec49130d"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.igw.aws_internet_gateway.gw",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.routeable",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "module.routeable.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0aa921425cbbcf8a1",
            "route_table_id": "rtb-0532b4f0685ca9fa4",
            "subnet_id": "subnet-0fad0e34f505a8773"
          },
          "dependencies": [
            "module.igw.aws_internet_gateway.gw",
            "module.ngw.aws_eip.nat_eip",
            "module.ngw.aws_nat_gateway.nat-gw",
            "module.routeable.aws_route_table.private-subnet",
            "module.subnets.aws_subnet.private",
            "module.subnets.aws_subnet.public",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.routeable",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private1",
      "provider": "module.routeable.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-07fc8a9316c66ace1",
            "route_table_id": "rtb-0532b4f0685ca9fa4",
            "subnet_id": "subnet-0f20d091c74c4f811"
          },
          "dependencies": [
            "module.igw.aws_internet_gateway.gw",
            "module.ngw.aws_eip.nat_eip",
            "module.ngw.aws_nat_gateway.nat-gw",
            "module.routeable.aws_route_table.private-subnet",
            "module.subnets.aws_subnet.private1",
            "module.subnets.aws_subnet.public",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.routeable",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "module.routeable.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-01ec866d82e806264",
            "route_table_id": "rtb-05981b68c6f225186",
            "subnet_id": "subnet-067a9ff9ee7eda1a2"
          },
          "dependencies": [
            "module.igw.aws_internet_gateway.gw",
            "module.routeable.aws_route_table.public-subnet",
            "module.subnets.aws_subnet.public",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.routeable",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public1",
      "provider": "module.routeable.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-06e1e761ba362eb85",
            "route_table_id": "rtb-05981b68c6f225186",
            "subnet_id": "subnet-0bc5b93841f3d98e3"
          },
          "dependencies": [
            "module.igw.aws_internet_gateway.gw",
            "module.routeable.aws_route_table.public-subnet",
            "module.subnets.aws_subnet.public1",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.securitygroups",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "backend-servers",
      "provider": "module.securitygroups.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:091570247959:security-group/sg-04d0e2a758c7b073e",
            "description": "security group for backend servers",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-04d0e2a758c7b073e",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0edd0180b17c16ae5"
                ],
                "self": true,
                "to_port": 22
              },
              {
                "cidr_blocks": [],
                "description": "open db port for webapp",
                "from_port": 3306,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0edd0180b17c16ae5"
                ],
                "self": true,
                "to_port": 3306
              },
              {
                "cidr_blocks": [],
                "description": "open memcached port for webapp",
                "from_port": 11211,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": true,
                "to_port": 11211
              },
              {
                "cidr_blocks": [],
                "description": "open rabbitmq port for webapp",
                "from_port": 5672,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": true,
                "to_port": 5672
              },
              {
                "cidr_blocks": [],
                "description": "open webapp port for nginx(frontend) ",
                "from_port": 8080,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0edd0180b17c16ae5"
                ],
                "self": true,
                "to_port": 8080
              }
            ],
            "name": "backend-servers",
            "name_prefix": "",
            "owner_id": "091570247959",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "dev",
              "Name": "backend-servers-sg",
              "Project": "vprofile-project"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "backend-servers-sg",
              "Project": "vprofile-project"
            },
            "timeouts": null,
            "vpc_id": "vpc-056afa564ec49130d"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.securitygroups.aws_security_group.frontend-servers",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.securitygroups",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "frontend-servers",
      "provider": "module.securitygroups.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:091570247959:security-group/sg-0edd0180b17c16ae5",
            "description": "security group for nginx-server",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0edd0180b17c16ae5",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "frontend-servers",
            "name_prefix": "",
            "owner_id": "091570247959",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "dev",
              "Name": "frontend-servers-sg",
              "Project": "vprofile-project"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "frontend-servers-sg",
              "Project": "vprofile-project"
            },
            "timeouts": null,
            "vpc_id": "vpc-056afa564ec49130d"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.subnets",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "module.subnets.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:091570247959:subnet/subnet-0fad0e34f505a8773",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1c",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0fad0e34f505a8773",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "091570247959",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "dev",
              "Name": "vprofile-sub-private",
              "Project": "vprofile-project"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "vprofile-sub-private",
              "Project": "vprofile-project"
            },
            "vpc_id": "vpc-056afa564ec49130d"
          },
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.subnets",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private1",
      "provider": "module.subnets.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:091570247959:subnet/subnet-0f20d091c74c4f811",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1d",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.4.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0f20d091c74c4f811",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "091570247959",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "dev",
              "Name": "vprofile-sub-private2",
              "Project": "vprofile-project"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "vprofile-sub-private2",
              "Project": "vprofile-project"
            },
            "vpc_id": "vpc-056afa564ec49130d"
          },
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.subnets",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "module.subnets.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:091570247959:subnet/subnet-067a9ff9ee7eda1a2",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-067a9ff9ee7eda1a2",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "091570247959",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "dev",
              "Name": "vprofile-sub-public",
              "Project": "vprofile-project"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "vprofile-sub-public",
              "Project": "vprofile-project"
            },
            "vpc_id": "vpc-056afa564ec49130d"
          },
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.subnets",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public1",
      "provider": "module.subnets.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:091570247959:subnet/subnet-0bc5b93841f3d98e3",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0bc5b93841f3d98e3",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "091570247959",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "dev",
              "Name": "vprofile-sub-public2",
              "Project": "vprofile-project"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "vprofile-sub-public2",
              "Project": "vprofile-project"
            },
            "vpc_id": "vpc-056afa564ec49130d"
          },
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "module.vpc.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:091570247959:vpc/vpc-056afa564ec49130d",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-02cb76033444f482c",
            "default_route_table_id": "rtb-0526e339c776d3baa",
            "default_security_group_id": "sg-0704cb23668b99090",
            "dhcp_options_id": "dopt-0ef3da9f8262dfc65",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-056afa564ec49130d",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0526e339c776d3baa",
            "owner_id": "091570247959",
            "tags": {
              "Environment": "dev",
              "Name": "vprofile-vpc",
              "Project": "vprofile-project"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "vprofile-vpc",
              "Project": "vprofile-project"
            }
          }
        }
      ]
    }
  ]
}